--- a/index.html
+++ b/index.html
@@ -62,9 +62,11 @@
 							</div>
 
 							<div class="slidesMain">
-								<h2>Beautiful sit amet</h2>
-								<p>Tempora unde illum ex! Animi iure cupiditate modi iusto aut minima perspiciatis quisquam.</p>
-								<button type="button" class="btn btn-light">Discover more</button>
+								<h2>Explore this city</h2>
+								<form class="form-inline my-2 my-lg-0">
+							      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+							     <button type="button" class="btn btn-light">Search</button>
+							    </form>
 							</div>
 
 							<div class="slidesMain">
@@ -97,21 +99,21 @@
 					<div class="slidercontainer">
 						<div class="sliderLine">
 							<div class="showSlide">
-								<div class="wrapperItemPlaces">
+								<div class="wrapperItemPlaces shadow p-3 mb-5 bg-white rounded">
 						      		<img src="image/nature.jpg" alt="">
 						      		<h5>Qui, tempors accusant</h5>
 						      		<p>Loroin es tabajer</p>
 						      		<p>Obcaecati excepturi minus neque fugiat est voluptatibus similique eos, quo nam periam pariatur dolore tempore, similique iste molesti</p>
 						      	</div>
 
-						      	<div class="wrapperItemPlaces">
+						      	<div class="wrapperItemPlaces shadow p-3 mb-5 bg-white rounded">
 						      		<img src="image/nature1.jpg" alt="">
 						      		<h5>Qui, tempors accusant</h5>
 						      		<p>Loroin es tabajer</p>
 						      		<p>Obcaecati excepturi minus neque fugiat est voluptatibus similique eos, quo nam periam pariatur dolore tempore, similique iste molesti</p>
 						      	</div>
 
-						      	<div class="wrapperItemPlaces">
+						      	<div class="wrapperItemPlaces shadow p-3 mb-5 bg-white rounded">
 						      		<img src="image/nature2.jpg" alt="">
 						      		<h5>Qui, tempors accusant</h5>
 						      		<p>Loroin es tabajer</p>
@@ -120,21 +122,21 @@
 						      </div>
 							
 							  <div class="showSlide">
-								<div class="wrapperItemPlaces">
+								<div class="wrapperItemPlaces shadow p-3 mb-5 bg-white rounded">
 						      		<img src="image/nature.jpg" alt="">
 						      		<h5>Qui, tempors accusant</h5>
 						      		<p>Loroin es tabajer</p>
 						      		<p>Obcaecati excepturi minus neque fugiat est voluptatibus similique eos, quo nam periam pariatur dolore tempore, similique iste molesti</p>
 						      	</div>
 
-						      	<div class="wrapperItemPlaces">
+						      	<div class="wrapperItemPlaces shadow p-3 mb-5 bg-white rounded">
 						      		<img src="image/nature1.jpg" alt="">
 						      		<h5>Qui, tempors accusant</h5>
 						      		<p>Loroin es tabajer</p>
 						      		<p>Obcaecati excepturi minus neque fugiat est voluptatibus similique eos, quo nam periam pariatur dolore tempore, similique iste molesti</p>
 						      	</div>
 
-						      	<div class="wrapperItemPlaces">
+						      	<div class="wrapperItemPlaces shadow p-3 mb-5 bg-white rounded">
 						      		<img src="image/nature2.jpg" alt="">
 						      		<h5>Qui, tempors accusant</h5>
 						      		<p>Loroin es tabajer</p>
@@ -144,21 +146,21 @@
 							
 
 							<div class="showSlide">
-								<div class="wrapperItemPlaces">
+								<div class="wrapperItemPlaces shadow p-3 mb-5 bg-white rounded">
 						      		<img src="image/nature.jpg" alt="">
 						      		<h5>Qui, tempors accusant</h5>
 						      		<p>Loroin es tabajer</p>
 						      		<p>Obcaecati excepturi minus neque fugiat est voluptatibus similique eos, quo nam periam pariatur dolore tempore, similique iste molesti</p>
 						      	</div>
 
-						      	<div class="wrapperItemPlaces">
+						      	<div class="wrapperItemPlaces shadow p-3 mb-5 bg-white rounded">
 						      		<img src="image/nature1.jpg" alt="">
 						      		<h5>Qui, tempors accusant</h5>
 						      		<p>Loroin es tabajer</p>
 						      		<p>Obcaecati excepturi minus neque fugiat est voluptatibus similique eos, quo nam periam pariatur dolore tempore, similique iste molesti</p>
 						      	</div>
 
-						      	<div class="wrapperItemPlaces">
+						      	<div class="wrapperItemPlaces shadow p-3 mb-5 bg-white rounded">
 						      		<img src="image/nature2.jpg" alt="">
 						      		<h5>Qui, tempors accusant</h5>
 						      		<p>Loroin es tabajer</p>
@@ -198,11 +200,11 @@
 
 							<div class="gallery" id="gallery">
 								<a href="image/gallery/5.jpg"><img class="img-fluid" src="image/gallery/5.1.jpg" alt=""></a>
-								<a href="image/gallery/2.jpg"><img class="img-fluid" src="image/gallery/2.1.jpg" alt=""></a>
-								<a href="image/gallery/3.jpg"><img class="img-fluid" src="image/gallery/3.1.jpg" alt=""></a>
-								<a href="image/gallery/6.jpg"><img class="img-fluid" src="image/gallery/6.1.jpg" alt=""></a>
 								<a href="image/gallery/4.jpg"><img class="img-fluid" src="image/gallery/4.1.jpg" alt=""></a>
 								<a href="image/gallery/1.jpg"><img class="img-fluid" src="image/gallery/1.1.jpg" alt=""></a>
+								<a href="image/gallery/1.jpg"><img class="img-fluid" src="image/gallery/1.1.jpg" alt=""></a>
+								<a href="image/gallery/5.jpg"><img class="img-fluid" src="image/gallery/5.1.jpg" alt=""></a>
+								<a href="image/gallery/4.jpg"><img class="img-fluid" src="image/gallery/4.1.jpg" alt=""></a>
 							</div>
 						</div>
 					</div>
@@ -241,13 +243,13 @@
 				<div class="col-12 col-md-9 col-md-9">
 					<div class="wrapperCollapse">
 						<div class="buttonsCollapse">
-							<a href="#july" class="julyBut">July 2018</a>
-							<a href="#june" class="juneBut">June 2018</a>
-							<a href="#may" class="mayBut">May 2018</a>
-							<a href="#april" class="aprilBut">April 2018</a>
+							<button class="tab" data-index='0'>July 2018</button>
+							<button class="tab" data-index='1'>June 2018</button>
+							<button class="tab" data-index='2'>May 2018</button>
+							<button class="tab" data-index='3'>April 2018</button>
 						</div>
 						<div class="wrapperAllCollapse" id="wrapperAllCollapse">
-							<div class="contentCollapse" id="july">
+							<div class="contentCollapse active" data-index='0'>
 								<div class="contentItem">
 									<img src="image/11.jpg" alt="">
 									<div class="contentTextCollapse">
@@ -279,9 +281,9 @@
 								</div>
 							</div>
 
-							<div class="contentCollapse" id="june">
+							<div class="contentCollapse" data-index='1'>
 								<div class="contentItem">
-									<img src="image/11.jpg" alt="">
+									<img src="image/15.jpg" alt="">
 									<div class="contentTextCollapse">
 										<h4>Perspiciatis culpa minus accusamus</h4>
 										<p class="collapseDate">24 June 2018</p>
@@ -291,7 +293,7 @@
 								</div>
 
 								<div class="contentItem">
-									<img src="image/12.jpg" alt="">
+									<img src="image/16.jpg" alt="">
 									<div class="contentTextCollapse">
 										<h4>Perspiciatis culpa minus accusamus</h4>
 										<p class="collapseDate">24 June 2018</p>
@@ -301,7 +303,7 @@
 								</div>
 
 								<div class="contentItem">
-									<img src="image/13.jpg" alt="">
+									<img src="image/17.jpg" alt="">
 									<div class="contentTextCollapse">
 										<h4>Perspiciatis culpa minus accusamus</h4>
 										<p class="collapseDate">24 July 2018</p>
@@ -311,9 +313,9 @@
 								</div>
 							</div>
 
-							<div class="contentCollapse" id="may">
+							<div class="contentCollapse" data-index='2'>
 								<div class="contentItem">
-									<img src="image/11.jpg" alt="">
+									<img src="image/12.jpg" alt="">
 									<div class="contentTextCollapse">
 										<h4>Perspiciatis culpa minus accusamus</h4>
 										<p class="collapseDate">24 may 2018</p>
@@ -323,7 +325,7 @@
 								</div>
 
 								<div class="contentItem">
-									<img src="image/12.jpg" alt="">
+									<img src="image/13.jpg" alt="">
 									<div class="contentTextCollapse">
 										<h4>Perspiciatis culpa minus accusamus</h4>
 										<p class="collapseDate">24 July 2018</p>
@@ -333,7 +335,7 @@
 								</div>
 
 								<div class="contentItem">
-									<img src="image/13.jpg" alt="">
+									<img src="image/11.jpg" alt="">
 									<div class="contentTextCollapse">
 										<h4>Perspiciatis culpa minus accusamus</h4>
 										<p class="collapseDate">24 July 2018</p>
@@ -343,7 +345,7 @@
 								</div>
 							</div>
 
-							<div class="contentCollapse" id="april">
+							<div class="contentCollapse" data-index='3'>
 								<div class="contentItem">
 									<img src="image/11.jpg" alt="">
 									<div class="contentTextCollapse">
@@ -432,12 +434,41 @@
 			</div>
 		</div>
 	</section>
-
+	<section id="sectionContacts">
+		<div class="container">
+			<div class="row">
+				<div class="col-12 col-md-3"></div>
+				<div class="col-12 col-md-9">
+					<div class="wrapperContacts">
+						<div class="ourconatctsWrap">
+							<h4>Our Contacts</h4>
+							<hr>
+							<p>427 World Davide Sute 42, New York, USA <br>
+							Tel. 3(800)567-678-90</p>
+						</div>
+						<div class="ourconatctsWrap">
+							<h4>Our Contacts</h4>
+							<hr>
+							<p>427 World Davide Sute 42, New York, USA <br>
+							Tel. 3(800)567-678-90</p>
+						</div>
+						<div class="ourconatctsWrap">
+							<h4>Our Contacts</h4>
+							<hr>
+							<p>427 World Davide Sute 42, New York, USA <br>
+							Tel. 3(800)567-678-90</p>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
 	<section id="footerSection">
 		<div class="container-fluid">
 			<div class="row">
 				<div class="col-12">
 					<div class="wrapperFooter">
+						<hr>
 						<p>Copyright (c) 2020 Company name Design: Sentra</p>
 					</div>
 				</div>
