--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css">
 	<link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900&display=swap" rel="stylesheet">
 <body>
-	<section id="home" class="mainSection">
+	<section>	
 		<div class="container-fluid">
 			<div class="row">
 			<div class="col-12">
@@ -52,13 +52,20 @@
 					</div>
 				</div>
 				</div>
-				<div class="col-12">
+			</div>
+		</div>
+	</section>
+
+	<section id="home" class="mainSection">
+		<div class="row">
+			<div class="col-12 col-md-3"></div>
+				<div class="col-12 col-md-9">
 					<div class="wrapperSliderMain">
 						<div class="sliderMain">
 							<div class="slidesMain">
 								<h2>Beautiful sit amet</h2>
 								<p>Tempora unde illum ex! Animi iure cupiditate modi iusto aut minima perspiciatis quisquam.</p>
-								<button type="button" class="btn btn-light">Discover more</button>
+								<button class="btnShine">Discover more</button>
 							</div>
 
 							<div class="slidesMain">
@@ -72,7 +79,7 @@
 							<div class="slidesMain">
 								<h2>Beautiful sit amet</h2>
 								<p>Tempora unde illum ex! Animi iure cupiditate modi iusto aut minima perspiciatis quisquam.</p>
-								<button type="button" class="btn btn-light">Discover more</button>
+								<button class="btnShine">Discover more</button>
 							</div>
 						</div>
 						<div class="wrapperMainControls">
@@ -81,8 +88,9 @@
 						</div>
 					</div>
 				</div>
-			</div>
 		</div>
+
+
 	</section>
 
 	<section id="sectionPlaces">
@@ -223,7 +231,7 @@
 							<h3>This is a <span>company</span> presentation.</h3>
 							<p>Presesnt sumenda rerum at id accusantium molestias.</p>
 							<p class="blondeText">Voluptates, deleniti ipsum dolor. Nulla explicabo, asperiores laboriosam cupiditate. Quibusdam, architecto, dignissimos. Sit facere accusantium asperiores doloribus.</p>
-							<button type="button" class="btn btn-primary">Continue Reading</button>
+							<button class="btnShine">Continue reading...</button>
 						</div>
 						<div class="presentationVideo">
 							<div class="embed-responsive embed-responsive-16by9">
@@ -256,7 +264,7 @@
 										<h4>Perspiciatis culpa minus accusamus</h4>
 										<p class="collapseDate">24 July 2018</p>
 										<p class="blondeText">Dolor sit amet, consectetur adipisicing elit. Itaque numquam id ipsum. Nostrum aliquam, minus, cupiditate provident omnis.</p>
-										<button type="button" class="btn btn-primary">Continue Reading</button>
+										<button class="btnShine">Continue reading..</button>
 									</div>
 								</div>
 
@@ -266,7 +274,7 @@
 										<h4>Perspiciatis culpa minus accusamus</h4>
 										<p class="collapseDate">24 July 2018</p>
 										<p class="blondeText">Dolor sit amet, consectetur adipisicing elit. Itaque numquam id ipsum. Nostrum aliquam, minus, cupiditate provident omnis vero.</p>
-										<button type="button" class="btn btn-primary">Continue Reading</button>
+										<button class="btnShine">Continue reading..</button>
 									</div>
 								</div>
 
@@ -276,7 +284,7 @@
 										<h4>Perspiciatis culpa minus accusamus</h4>
 										<p class="collapseDate">24 July 2018</p>
 										<p class="blondeText">Dolor sit amet, consectetur adipisicing elit. Itaque numquam id ipsum. Nostrum aliquam, minus, cupiditate provident omnis.</p>
-										<button type="button" class="btn btn-primary">Continue Reading</button>
+										<button class="btnShine">Continue reading..</button>
 									</div>
 								</div>
 							</div>
@@ -288,7 +296,7 @@
 										<h4>Perspiciatis culpa minus accusamus</h4>
 										<p class="collapseDate">24 June 2018</p>
 										<p class="blondeText">Dolor sit amet, consectetur adipisicing elit. Itaque numquam id ipsum. Nostrum aliquam, minus, cupiditate provident omnis.</p>
-										<button type="button" class="btn btn-primary">Continue Reading</button>
+										<button class="btnShine">Continue reading..</button>
 									</div>
 								</div>
 
@@ -298,7 +306,7 @@
 										<h4>Perspiciatis culpa minus accusamus</h4>
 										<p class="collapseDate">24 June 2018</p>
 										<p class="blondeText">Dolor sit amet, consectetur adipisicing elit. Itaque numquam id ipsum. Nostrum aliquam, minus, cupiditate provident omnis.</p>
-										<button type="button" class="btn btn-primary">Continue Reading</button>
+										<button class="btnShine">Continue reading..</button>
 									</div>
 								</div>
 
@@ -308,7 +316,7 @@
 										<h4>Perspiciatis culpa minus accusamus</h4>
 										<p class="collapseDate">24 July 2018</p>
 										<p class="blondeText">Dolor sit amet, consectetur adipisicing elit. Itaque numquam id ipsum. Nostrum aliquam, minus, cupiditate provident omnis.</p>
-										<button type="button" class="btn btn-primary">Continue Reading</button>
+										<button class="btnShine">Continue reading..</button>
 									</div>
 								</div>
 							</div>
@@ -320,7 +328,7 @@
 										<h4>Perspiciatis culpa minus accusamus</h4>
 										<p class="collapseDate">24 may 2018</p>
 										<p class="blondeText">Dolor sit amet, consectetur adipisicing elit. Itaque numquam id ipsum. Nostrum aliquam, minus, cupiditate provident omnis.</p>
-										<button type="button" class="btn btn-primary">Continue Reading</button>
+										<button class="btnShine">Continue reading..</button>
 									</div>
 								</div>
 
@@ -330,7 +338,7 @@
 										<h4>Perspiciatis culpa minus accusamus</h4>
 										<p class="collapseDate">24 July 2018</p>
 										<p class="blondeText">Dolor sit amet, consectetur adipisicing elit. Itaque numquam id ipsum. Nostrum aliquam, minus, cupiditate provident omnis.</p>
-										<button type="button" class="btn btn-primary">Continue Reading</button>
+										<button class="btnShine">Continue reading..</button>
 									</div>
 								</div>
 
@@ -340,7 +348,7 @@
 										<h4>Perspiciatis culpa minus accusamus</h4>
 										<p class="collapseDate">24 July 2018</p>
 										<p class="blondeText">Dolor sit amet, consectetur adipisicing elit. Itaque numquam id ipsum. Nostrum aliquam, minus, cupiditate provident omnis.</p>
-										<button type="button" class="btn btn-primary">Continue Reading</button>
+										<button class="btnShine">Continue reading..</button>
 									</div>
 								</div>
 							</div>
@@ -352,7 +360,7 @@
 										<h4>Perspiciatis culpa minus accusamus</h4>
 										<p class="collapseDate">24 april 2018</p>
 										<p class="blondeText">Dolor sit amet, consectetur adipisicing elit. Itaque numquam id ipsum. Nostrum aliquam, minus, cupiditate provident omnis.</p>
-										<button type="button" class="btn btn-primary">Continue Reading</button>
+										<button class="btnShine">Continue reading..</button>
 									</div>
 								</div>
 
@@ -362,7 +370,7 @@
 										<h4>Perspiciatis culpa minus accusamus</h4>
 										<p class="collapseDate">24 July 2018</p>
 										<p class="blondeText">Dolor sit amet, consectetur adipisicing elit. Itaque numquam id ipsum. Nostrum aliquam, minus, cupiditate provident omnis.</p>
-										<button type="button" class="btn btn-primary">Continue Reading</button>
+										<button class="btnShine">Continue reading..</button>
 									</div>
 								</div>
 
@@ -372,7 +380,7 @@
 										<h4>Perspiciatis culpa minus accusamus</h4>
 										<p class="collapseDate">24 July 2018</p>
 										<p class="blondeText">Dolor sit amet, consectetur adipisicing elit. Itaque numquam id ipsum. Nostrum aliquam, minus, cupiditate provident omnis.</p>
-										<button type="button" class="btn btn-primary">Continue Reading</button>
+										<button class="btnShine">Continue reading..</button>
 									</div>
 								</div>
 							</div>
@@ -426,7 +434,7 @@
 						    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" placeholder="Your message.."></textarea>
 						  </div>
 						  <div class="wrapperButtonForm">
-						  	<button type="button" class="btn btn-primary">Continue Reading</button>
+						  	<button class="btnShine">Send</button>
 						  </div>
 						</form>
 					</div>
